--- a/src/components/CSS/Home.css
+++ b/src/components/CSS/Home.css
@@ -13,7 +13,7 @@
 .myavtar{
     /* filter: drop-shadow(5px 5px 10px lightgrey); */
     width: 20vw;
-    background-image: url('./images/splash.png');
+    background-image: url('/images/splash.png');
     background-size: cover;
 }
 
