--- a/src/components/CSS/Skills.css
+++ b/src/components/CSS/Skills.css
@@ -20,6 +20,7 @@
 }
 
 .skillcard{
+    width: fit-content;
     background-color: #1c1f2b;
     margin: 10px;
     border-radius: 10px;
@@ -58,5 +59,20 @@
     }
     to{
         --angle:360deg
+    }
+}
+
+
+@media (max-width: 768px){
+    .SkillsHead{
+        font-size:2em;
+    }
+    .skillcard > img{
+        width:30px;
+    }
+
+    .skillresponsive{
+        display: grid;
+        grid-template-columns: 32% 32% 32%;
     }
 }
